# Finace-site

./: Dockerfile  docker-compose.yml  pyproject.toml  run-celery.sh  wsgi-entrypoint.sh
apps/authentication/: mixins.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/budget/: models.py  serializers.py  urls.py  views.py
apps/budget/migrations/: 0001_initial.py  0002_alter_budget_options_alter_budget_codename_and_more.py
apps/categories/: models.py  repositories.py  serializers.py
apps/categories/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_codename_and_more.py
apps/expenses/: models.py  serializers.py
apps/expenses/migrations/: 0001_initial.py  0002_alter_expense_options_alter_expense_amount_and_more.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: initadmin.py
apps/users/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
